fix: add text-overflow and max-width

--- a/blocks/media/__body/media__body.css
+++ b/blocks/media/__body/media__body.css
@@ -3,3 +3,10 @@
   padding: 0;
   margin-left: 30px;
 }
+
+@media screen and (max-width: 480px) {
+  .media__body {
+    max-width: 282px;
+    margin-left: 0;
+  }
+}
