--- a/blocks/media/__item/media__item.css
+++ b/blocks/media/__item/media__item.css
@@ -1,7 +1,6 @@
 .media__item {
   display: flex;
   align-items: center;
-  margin: 0;
 }
 
 @media screen and (max-width: 480px) {
