--- a/blocks/media/__job/media__job.css
+++ b/blocks/media/__job/media__job.css
@@ -1,7 +1,4 @@
-.media__name {
-  font-weight: 500;
-  font-size: 42px;
-  line-height: 1.3;
+.media__job {
   margin: 0;
   max-width: 380px;
   text-overflow: ellipsis;
@@ -10,17 +7,15 @@
 }
 
 @media screen and (max-width: 810px) {
-  .media__name {
-    font-size: 5vw;
+  .media__job {
     max-width: calc(80vw - 150px);
   }
 }
 
 @media screen and (max-width: 480px) {
-  .media__name {
-    padding-top: 15px;
-    font-size: 22px;
+  .media__job {
     text-align: center;
     max-width: calc(80vw - 19*2px);
+    margin-top: 14px;
   }
 }
