--- a/blocks/profile/__btn/profile__btn.css
+++ b/blocks/profile/__btn/profile__btn.css
@@ -8,7 +8,7 @@
   justify-self: end;
 }
 
-@media screen and (max-width: 740px) {
+@media screen and (max-width: 810px) {
   .profile__btn {
     justify-self: center;
     margin-top: 36px;
